data-access/networkpolicy-openvpn-db-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openvpn-db-egress
  namespace: vpn
spec:
  podSelector:
    matchLabels:
      app: openvpn-db
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dev
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mongodb
      ports:
        - protocol: TCP
          port: 27017

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: stage
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mongodb
      ports:
        - protocol: TCP
          port: 27017

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prod-1
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mongodb
      ports:
        - protocol: TCP
          port: 27017

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prod-2
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mongodb
      ports:
        - protocol: TCP
          port: 27017

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prod-3
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mongodb
      ports:
        - protocol: TCP
          port: 27017

    - to:
        - ipBlock:
            cidr: 10.233.0.0/18
      ports:
        - protocol: TCP
          port: 27017

    - to:
        - ipBlock:
            cidr: 10.233.64.0/18
      ports:
        - protocol: TCP
          port: 27017

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
